--- a/app/assets/stylesheets/api/overview.scss
+++ b/app/assets/stylesheets/api/overview.scss
@@ -8,12 +8,12 @@
   // justify-content: center;
   // flex-flow: row wrap;
   // padding-bottom: 200px;
-  margin-top: 200px;
+  // margin-top: 200px;
 }
 
 .popular-tab {
   color: white;
-  margin-top: 100px;
+  // margin-top: 100px;
   margin-left: 50px;
 }
 
@@ -27,5 +27,5 @@
 }
 
 .related-artists {
-  margin-top: 250px;
+  // margin-top: 50px;
 }
