--- a/app/assets/stylesheets/api/songs.scss
+++ b/app/assets/stylesheets/api/songs.scss
@@ -70,6 +70,11 @@
 
 .left-song {
   align-self: center;
+  // display: flex;
+  // flex-direction: row;
+}
+
+.left-user-song {
   display: flex;
   flex-direction: row;
 }
