--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,8 +1,6 @@
 <% if logged_in? %>
   <script type="text/javascript">
-    window.user = <%= render(
-      "api/users/user.json.jbuilder", 
-      user: current_user).html_safe %>
+    window.user = <%= render("api/users/user.json.jbuilder", user: current_user).html_safe %>
   </script>
 <% end %>
 
