Add currentSong to window

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,6 +1,7 @@
 <% if logged_in? %>
   <script type="text/javascript">
-    window.user = <%= render("api/users/user.json.jbuilder", user: current_user).html_safe %>
+    window.user = <%= render("api/users/user.json.jbuilder", user: current_user, currentSong: current_song(current_user)).html_safe %>
+    window.currentSong = <%= render("api/songs/song.json.jbuilder", song: current_song(current_user)).html_safe %>
   </script>
 <% end %>
 
