Add musicPlayer images

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,10 @@
       window.whitePlay = "<%= image_url("white-play.png") %>"
       window.whitePlay2 = "<%= image_url("white-play2.png") %>"
       window.whiteMusic2 = "<%= image_url("white-music2.png") %>"
+      window.musicPlayerPlay = "<%= image_url("musicPlayer-play.png") %>"
+      window.musicPlayerPause = "<%= image_url("musicPlayer-pause.png") %>"
+      window.musicPlayerPrev = "<%= image_url("musicPlayer-prev.png") %>"
+      window.musicPlayerNext = "<%= image_url("musicPlayer-next.png") %>"
       </script>
   </head>
 
