Add musicPlayer check and plus images

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,8 @@
       window.musicPlayerPause = "<%= image_url("musicPlayer-pause.png") %>"
       window.musicPlayerPrev = "<%= image_url("musicPlayer-prev.png") %>"
       window.musicPlayerNext = "<%= image_url("musicPlayer-next.png") %>"
+      window.musicPlayerCheck = "<%= image_url("musicPlayer-check.png") %>"
+      window.musicPlayerPlus = "<%= image_url("musicPlayer-plus.png") %>"
       </script>
   </head>
 
