--- a/app/assets/stylesheets/api/music.scss
+++ b/app/assets/stylesheets/api/music.scss
@@ -65,10 +65,10 @@
 .musicPlayer-controls {
   width: 40%;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-self: center;
+  flex-direction: column;
+  align-items: center;
 }
+
 .musicPlayer-buttons {
   display: flex;
   justify-content: space-evenly;
@@ -104,6 +104,17 @@
   opacity: 1;
   cursor: pointer;
   transform: scale(1.07);
+}
+
+.musicPlayer-songBar {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.currentSong-time {
+  color: rgba(255, 255, 255, 0.575);
+  font-size: 12px;
 }
 
 // MUSIC PLAYER VOLUME
