--- a/app/assets/stylesheets/api/navbar.scss
+++ b/app/assets/stylesheets/api/navbar.scss
@@ -15,6 +15,13 @@
 }
 
 // ALL
+.navbar-flex {
+  display: flex;
+  flex-direction: column;
+  height: 210px;
+  justify-content: space-around;
+}
+
 .logged-in {
   //TEST
   // background-color: rgb(78, 3, 3);
@@ -33,6 +40,9 @@
   list-style: none;
   background-color: black;
   margin-top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
   // with opacity
   // background-color: #000000b6;
@@ -181,7 +191,7 @@
   position: relative;
   font-size: 14px;
   left: 23px;
-  bottom: -420px;
+  bottom: 120px;
 }
 
 .profile-button:hover {
