Add sound and mute images

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,8 @@
       window.musicPlayerNext = "<%= image_url("musicPlayer-next.png") %>"
       window.musicPlayerCheck = "<%= image_url("musicPlayer-check.png") %>"
       window.musicPlayerPlus = "<%= image_url("musicPlayer-plus.png") %>"
+      window.musicPlayerMute = "<%= image_url("musicPlayer-mute.png") %>"
+      window.musicPlayerSound = "<%= image_url("musicPlayer-sound.png") %>"
       </script>
   </head>
 
