Add musicIcon Hover pointer and musicImg div CSS

--- a/app/assets/stylesheets/api/songs.scss
+++ b/app/assets/stylesheets/api/songs.scss
@@ -102,3 +102,13 @@
   width: 20px;
   align-self: center;
 }
+
+.music-icon:hover {
+  cursor: pointer;
+}
+
+.music-img {
+  height: 20px;
+  width: 20px;
+  align-self: center;
+}
