--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -89,11 +89,17 @@
 
 
 // ERROR
+.signup-error-messages{
+  position: relative;
+  top: -10px;
+}
+
 .signup-error {
   list-style: none;
   color: red;
   position: relative;
-  left: -20px;
+  padding-bottom: 10px;
+  // left: -66px;
 }
 
 .required-msg {
@@ -116,6 +122,10 @@
 }
 
 // SIGNUP INPUTS
+
+.signup-info {
+  margin-top: 10px;
+}
 
 .input {
   border: 1px solid #dfe0e6;
@@ -154,9 +164,9 @@
 
 // CONFIRM EMAIL INPUT
 
-.input-space {
-  margin-top: 16px;
-}
+// .input-space {
+//   margin-top: 16px;
+// }
 
 // DOB
 .dob-text {
