Add meta tag in applicationHtmlErb file

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Modify</title>
+    <meta name="description" content="Modify, Spotify clone, Music App, App Academy, Fullstack project, youngchullim">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <link rel="shortcut icon" type="image/png" href="<%= image_url("black_logo.png") %>">
